<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:ignore="HardcodedText,RtlHardcoded,InefficientWeight,ContentDescription">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16.0dip"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:background="@drawable/selector_backdelete_bg" />

        <TextView
            android:id="@+id/txt_rmb"
            style="@style/digit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:clickable="false"
            android:text="@string/rmb" />

        <EditText
            android:id="@+id/txt_amount"
            style="@style/digit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/btn_delete"
            android:layout_toRightOf="@+id/txt_rmb"
            android:background="@android:color/transparent"
            android:clickable="false"
            android:ems="10"
            android:enabled="false"
            android:gravity="start"
            android:hint="0.00"
            android:maxLength="12"
            android:padding="5dp" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1.0px"
        android:background="@color/color_hui" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3.0">

        <TextView
            android:id="@+id/digit_1"
            style="@style/digit"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:tag="1"
            android:text="1" />

        <TextView
            android:id="@+id/digit_2"
            style="@style/digit"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:tag="2"
            android:text="2" />

        <TextView
            android:id="@+id/digit_3"
            style="@style/digit"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:tag="3"
            android:text="3" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3.0">

        <TextView
            android:id="@+id/digit_4"
            style="@style/digit"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:tag="4"
            android:text="4" />

        <TextView
            android:id="@+id/digit_5"
            style="@style/digit"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:tag="5"
            android:text="5" />

        <TextView
            android:id="@+id/digit_6"
            style="@style/digit"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:tag="6"
            android:text="6" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3.0">

        <TextView
            android:id="@+id/digit_7"
            style="@style/digit"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:tag="7"
            android:text="7" />

        <TextView
            android:id="@+id/digit_8"
            style="@style/digit"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:tag="8"
            android:text="8" />

        <TextView
            android:id="@+id/digit_9"
            style="@style/digit"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:tag="9"
            android:text="9" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3.0">

        <TextView
            android:id="@+id/decimal"
            style="@style/digit"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:tag="."
            android:text="." />

        <TextView
            android:id="@+id/digit_0"
            style="@style/digit"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:tag="0"
            android:text="0" />

        <TextView
            style="@style/digit"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:enabled="false"
            android:tag=""
            android:text=""
            android:textColor="#ff555555" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1.0px"
        android:background="#ffaaaaaa" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_dia_cacle"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:gravity="center"
            android:text="@string/dialog_cacle"
            android:textColor="@color/color_theme" />

        <View
            android:layout_width="1.0px"
            android:layout_height="50dp"
            android:background="@color/color_hui" />

        <TextView
            android:id="@+id/btn_dia_ok"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:gravity="center"
            android:text="@string/dialog_ok"
            android:textColor="@color/color_theme" />
    </LinearLayout>

</LinearLayout>